[tool.poetry]
name = "Vhymn"
version = "0.1.0"
description = ""
authors = ["Mateen Ahamed"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
spleeter = "^2.3.0"

[tool.poetry.group.dev.dependencies]
# Add dev tools here if needed, like:
# black = "^24.0.0"
# isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
