[tool.poetry]
name = "Vhymn"
version = "0.1.0"
description = ""
authors = ["Mateen Ahamed"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "0.95.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
spleeter = "^2.3.0"
flask = "^2.2.5"

[tool.poetry.group.dev.dependencies]
# Add dev tools here if needed, like:
# black = "^24.0.0"
# isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
