[tool.poetry]
name = "Vhymn"
version = "0.1.0"
description = ""
authors = ["Mateen Ahamed"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"  # Only versions supported by spleeter
fastapi = "0.95.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
spleeter = "^2.3.0"
# flask = "^2.2.5" 

[tool.poetry.group.dev.dependencies]
# Optional dev dependencies
# black = "^24.0.0"
# isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
